# School_Managment_System

./: .env  .gitignore  README.md  db_manager.py  project doc.txt  project doc2.txt  pyproject.toml  requirements.txt
Api Endpoints/: ReadMe.md
Api Endpoints/School Management/: Default.json
Api Endpoints/School Management/Admin/: All Classes.json  All Subjects.json  All Users.json  Create Class.json  Create Student.json  Create Subject.json  Create Teacher.json  Delete User.json  Delete class.json  Delete subject.json
Api Endpoints/School Management/Admin/Class/: All Classes.json  Delete class.json
Api Endpoints/School Management/Admin/Notice/: All Notice.json  Create Notice.json  Delete Notice.json
Api Endpoints/School Management/Admin/Student Class Relation/: All Students.json  assign_class_to_student.json
Api Endpoints/School Management/Admin/Subject/: All Subjects.json  Create Subject.json  Delete subject.json
Api Endpoints/School Management/Admin/Teacher Class Sub/: All Teacher.json  Assign Class.json  Assign Subject.json
Api Endpoints/School Management/Authentication/: Login.json  is_Auth.json
api/: index.py
app/: database.py  main.py
app/api/v1/endpoints/: admin.py  auth.py
app/models/: models.py
app/schemas/: Class.py  Notice.py  Subject.py  Users.py
app/services/: admin.py  auth.py
